# Speech-Driven-Gesture-Generation-via-CFM-with-Masked-Training-and-Constrained-Sampling

./: .gitattributes  .gitignore  LICENSE  README.md  demo.py  generate_from_wav.py  index.html  pyproject.toml  readme.md  requirements.txt
chkpts/: 250320.pth  stats.pkl
modules/: audio_encoder.py  augment_utils.py  dataset.py  fm.py  lr_scheduler.py  model.py  model_utils.py  nn.py  render_utils.py
modules/smplx_models/smplx/: joint_names.py  joints.py  skeleton.txt
modules/transformer/: tisa_transformer.py
src/modules/: audio_encoder.py  audio_feature_extraction.py  augment_utils.py  dataset.py  fm.py  model.py  nn.py  render_utils.py  reproduce_utils.py  rotation_utils.py  smplx_utils.py  tensor_utils.py
src/scripts/: demo.py
